objects/Account_Int__c/Account_Int__c.object-meta.xml
<CustomObject>
    <description>This object will act as a interface table between CRM and iCRM for Account data</description>
    <label>Account_Int</label>
    <nameField>
        <label>Account_Int Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts_Int</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>