objects/Account_Int__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>This field will have ABN # of a CRMOD Account.</description>
    <label>ABN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>