objects/Account_Int__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>This field will have the CRMOD Account Name</description>
    <label>Account Name</label>
    <type>TextArea</type>
</CustomField>