objects/Account_Int__c/fields/Account_Types__c.field-meta.xml
<CustomField>
    <fullName>Account_Types__c</fullName>
    <label>Account Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>