objects/Account_Int__c/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <label>ACN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>