objects/Account_Int__c/fields/Annual_Revenues__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenues__c</fullName>
    <label>Annual Revenues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>