objects/Account_Int__c/fields/Approximate_of_properties__c.field-meta.xml
<CustomField>
    <fullName>Approximate_of_properties__c</fullName>
    <label>Approximate # of properties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>