objects/Account_Int__c/fields/Association_Error__c.field-meta.xml
<CustomField>
    <fullName>Association_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Association Error</label>
    <type>Checkbox</type>
</CustomField>