objects/Account_Int__c/fields/Bill_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Bill_Address_2__c</fullName>
    <label>Bill Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>