objects/Account_Int__c/fields/Bill_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Bill_Address_3__c</fullName>
    <label>Bill Address 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>