objects/Account_Int__c/fields/Bill_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_Country__c</fullName>
    <label>Bill Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>