objects/Account_Int__c/fields/Bill_Number_Street__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number_Street__c</fullName>
    <label>Bill Number/Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>