objects/Account_Int__c/fields/Bill_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Post_Code__c</fullName>
    <label>Bill Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>