objects/Account_Int__c/fields/Billing_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Site_ID__c</fullName>
    <label>Billing Site ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>