objects/Account_Int__c/fields/Credit_Check_Comments_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Comments_Conditions__c</fullName>
    <label>Credit Check Comments/Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>