objects/Account_Int__c/fields/Credit_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Required__c</fullName>
    <label>Credit Check Required</label>
    <length>40</length>
    <type>Text</type>
</CustomField>