objects/Account_Int__c/fields/Credit_Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Result__c</fullName>
    <label>Credit Check Result</label>
    <length>40</length>
    <type>Text</type>
</CustomField>