objects/Account_Int__c/fields/CRM_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>CRM Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>