objects/Account_Int__c/fields/CRM_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Last_Modified_Date__c</fullName>
    <label>CRM Last Modified Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>