objects/Account_Int__c/fields/Developer_Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Developer_Billing_Account_Number__c</fullName>
    <label>Developer Billing Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>