objects/Account_Int__c/fields/Developer_Classification__c.field-meta.xml
<CustomField>
    <fullName>Developer_Classification__c</fullName>
    <label>Developer Classification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>