objects/Account_Int__c/fields/Developer_Group__c.field-meta.xml
<CustomField>
    <fullName>Developer_Group__c</fullName>
    <label>Developer Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>