objects/Account_Int__c/fields/Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Documents_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Received</label>
    <type>Checkbox</type>
</CustomField>