objects/Account_Int__c/fields/Eligible_for_Deemed_To_Accept__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Deemed_To_Accept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Deemed To Accept</label>
    <type>Checkbox</type>
</CustomField>