objects/Account_Int__c/fields/High_Risk__c.field-meta.xml
<CustomField>
    <fullName>High_Risk__c</fullName>
    <label>High Risk</label>
    <length>40</length>
    <type>Text</type>
</CustomField>