objects/Account_Int__c/fields/IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will help to understand whether the record is processed by Translation Jobs</description>
    <label>IsProcessed</label>
    <type>Checkbox</type>
</CustomField>