objects/Account_Int__c/fields/Legal_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Review Required</label>
    <type>Checkbox</type>
</CustomField>