objects/Account_Int__c/fields/Main_Fax__c.field-meta.xml
<CustomField>
    <fullName>Main_Fax__c</fullName>
    <label>Main Fax</label>
    <length>40</length>
    <type>Text</type>
</CustomField>