objects/Account_Int__c/fields/Non_ABN_Type__c.field-meta.xml
<CustomField>
    <fullName>Non_ABN_Type__c</fullName>
    <label>Non-ABN Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>