objects/Account_Int__c/fields/Number_Street__c.field-meta.xml
<CustomField>
    <fullName>Number_Street__c</fullName>
    <label>Number/Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>