objects/Account_Int__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>