objects/Account_Int__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <label>Parent Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>