objects/Account_Int__c/fields/Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Id__c</fullName>
    <label>Parent Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>