objects/Account_Int__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>