objects/Account_Int__c/fields/Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Id__c</fullName>
    <label>Primary Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>