objects/Account_Int__c/fields/Registered_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Entity_Name__c</fullName>
    <label>Registered Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>