objects/Account_Int__c/fields/Schedule_Job__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Schedule Job</label>
    <referenceTo>Batch_Job__c</referenceTo>
    <relationshipLabel>Accounts_Int</relationshipLabel>
    <relationshipName>Accounts_Int</relationshipName>
    <type>Lookup</type>
</CustomField>