objects/Account_Int__c/fields/Schedule_Job_Transformation__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Job_Transformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Job Transformation</label>
    <referenceTo>Batch_Job__c</referenceTo>
    <relationshipLabel>Accounts_Int (Schedule Job Transformation)</relationshipLabel>
    <relationshipName>Accounts_Int_Transform</relationshipName>
    <type>Lookup</type>
</CustomField>