objects/Account_Int__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This will provide the status of the record after the job processed.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>