objects/Account_Int__c/fields/Transformation_Status__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Status__c</fullName>
    <label>Transformation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extracted from CRM</fullName>
                <default>true</default>
                <label>Extracted from CRM</label>
            </value>
            <value>
                <fullName>Copied to Base Table</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Ready for Parent Account Association</fullName>
            </value>
            <value>
                <fullName>Association Error</fullName>
            </value>
            <value>
                <fullName>Ready for Primary Contact Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>