objects/Account_Int__c/fields/Trustee_ACN__c.field-meta.xml
<CustomField>
    <fullName>Trustee_ACN__c</fullName>
    <label>Trustee ACN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>