objects/Account_Int__c/fields/Upfront_Required__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Required__c</fullName>
    <label>Upfront % Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>