objects/Account_Int__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CRM_Last_Modified_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Types__c</columns>
    <columns>CRM_Account_Id__c</columns>
    <columns>Number_Street__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Primary_Contact_Id__c</columns>
    <columns>State__c</columns>
    <columns>Post_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Schedule_Job__c</columns>
    <columns>Transformation_Status__c</columns>
    <columns>Schedule_Job_Transformation__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Dilip Athley</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>